# whispering

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  logger.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
schemas/: __init__.py
services/: __init__.py
